Fix message overflow to wrap.

--- a/stylesheets/chat-screen.css
+++ b/stylesheets/chat-screen.css
@@ -183,6 +183,7 @@
 
 .message {
   overflow: auto;
+  overflow-wrap: break-word;
 }
 
 /* Change message background color on hover on light theme */
